--- a/production/imports/ui/stylingsheets/editor.less
+++ b/production/imports/ui/stylingsheets/editor.less
@@ -484,3 +484,14 @@ i.material-icons:hover {
     }
   }
 }
+@media screen and (max-width: 768px){
+  .post-info-form{
+    margin-bottom: 25px;
+    input{
+      font-size: 25px;
+    }
+    input[name='sub']{
+      font-size: medium;
+    }
+  }
+}
