Bunch of front end improvements

--- a/production/imports/ui/stylingsheets/editor.less
+++ b/production/imports/ui/stylingsheets/editor.less
@@ -484,6 +484,11 @@ i.material-icons:hover {
     }
   }
 }
+
+.review-stage{
+  text-align: center;
+}
+
 @media screen and (max-width: 768px){
   .post-info-form{
     margin-bottom: 25px;
