--- a/production/imports/ui/stylingsheets/login.less
+++ b/production/imports/ui/stylingsheets/login.less
@@ -60,7 +60,6 @@
   display: flex;
   height: 100vh;
   background-color: #4CAF50;
-
   background-position: center;
   background-size: cover;
 }
@@ -178,6 +177,7 @@ input {
   }
   .branding{
     width: 100%;
+    text-align: center;
     .life-brand{
       padding-left: 0;
     }
