--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -148,12 +148,16 @@
   padding: 15px;
   transition: .5s ease;
   margin: auto;
-  margin-top: 7.5%;
-  margin-bottom: 7.5%;
   min-height: 200px;
   opacity: 0.9;
 }
-
+.grid-bg-img-container{
+  padding-top: 7.5%;
+  padding-bottom: 7.5%;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+}
 @media screen and (max-width: 768px) {
   .grid-sizer, .grid-item {
     width: 100%;
