added remove post in all posts

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -119,6 +119,7 @@
                             </div>
                         </div>
                     {{/each}}
+                    <button class="btn btn-primary btn-wide load-more-posts">Load More</button>
                 </div>
             </div>
         </div>
