implemented i18n and keyword search for blog editor

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -178,7 +178,7 @@
                 <form class="form post-info-form full-width">
                     <!--Blog Title-->
                     <input type="text" placeholder="Title*" id="blogTitle">
-                    <input type="text" placeholder="Sub-title" name="sub" id="blogSubTitle">
+                    <input type="text" placeholder="Description*" name="sub" id="blogSubTitle">
                 </form>
             </div>
         </div>
