--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -48,20 +48,31 @@
             <a href="/logout" class="logout-btn">{{_ "nav.logout"}}</a>
         </div>
         <div class="side-nav-body">
-            <a href="/">{{_ "nav.side_items.stream"}}</a>
-            <a href="/stories">{{_ "nav.side_items.stories"}}</a>
-            {{#if isStudent}}
-                <a href="" id="academics"><div class="expand-text">{{_ "nav.side_items.marks"}}</div><i class="fa fa-times academics-icon"></i></a>
-                <ul class="course-list">
-                    {{#each courses}}
-                        <li><a href="/course/{{subject_id}}" class="course-link">{{course}}<i class="{{state}}">{{mark}}</i></a></li>
-                    {{/ each}}
-                </ul>
-                <a href="">{{_ "nav.side_items.suggest"}}</a>
-            {{/ if}}
-            {{#if isAdmin}}
-                <a href="/dashboard">{{_ "nav.side_items.admin"}}</a>
-            {{/ if}}
+            {{#if dash}}
+                <a href="/dashboard"><i class="fa fa-home"></i> Home</a>
+                <a href="/dashboard/announcements"><i class="fa fa-bullhorn"></i> Posts</a>
+                <a href="/dashboard/suggestions"><i class="fa fa-pencil-square-o"></i> Suggestions</a>
+                <a href="/dashboard/categories"><i class="fa fa-list"></i> Manage Categories</a>
+                <a href="/dashboard/organizations"><i class="fa fa-list"></i> Manage Organizations</a>
+                <a href="/dashboard/users"><i class="fa fa-group"></i> Manage Users</a>
+                <a href=""><i class="fa fa-newspaper-o"></i> Newsletters</a>
+                <a href=""><i class="fa fa-gear"></i> Settings</a>
+            {{else}}
+                <a href="/">{{_ "nav.side_items.stream"}}</a>
+                <a href="/stories">{{_ "nav.side_items.stories"}}</a>
+                {{#if isStudent}}
+                    <a href="" id="academics"><div class="expand-text">{{_ "nav.side_items.marks"}}</div><i class="fa fa-times academics-icon"></i></a>
+                    <ul class="course-list">
+                        {{#each courses}}
+                            <li><a href="/course/{{subject_id}}" class="course-link">{{course}}<i class="{{state}}">{{mark}}</i></a></li>
+                        {{/ each}}
+                    </ul>
+                    <a href="">{{_ "nav.side_items.suggest"}}</a>
+                {{/ if}}
+                {{#if isAdmin}}
+                    <a href="/dashboard">{{_ "nav.side_items.admin"}}</a>
+                {{/ if}}
+            {{/if}}
         </div>
     </div>
     <div class="nav-overlay"></div>
