Editor should be mature for release now

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -139,14 +139,14 @@
                 <div class="row">
                     {{#each post}}
                         <div class="col-lg-12 draft-item" id="{{_id}}">
-                            <div class="editor-options draft-inline">
+                            <div class="editor-options draft-inline {{isRejected}}">
                                 <div class="col-md-3">
                                     <img src="{{imageLink}}" class="img-responsive">
                                 </div>
                                 <div class="content-preview col-md-6">
                                     <h3 class="draft-title">{{headline}}{{title}}</h3>
                                     <span>Created: {{draftedDate}}. Format: {{type}}</span>
-                                    <p class="draft-body">{{#if isBlog}}{{subtitle}}{{else}}{{content}}{{/if}}</p>
+                                    <p class="draft-body">{{#if isBlog}}{{subtitle}}{{else}}{{content}}{{/if}}{{#if rejected}}<span style="color: red">{{rejectedReason}}</span>{{/if}}</p>
                                     <div class="dropdown" style="max-width: 164px">
                                         <button class="dropbtn">Quick Actions</button>
                                         <div class="dropdown-content">
@@ -168,7 +168,6 @@
         </div>
     </div>
 </template>
-
 <template name="blogEditor">
     <div class="container blog-editor" hidden>
         <h2 class="editor-title">Creating a new draft</h2>
@@ -458,6 +457,34 @@
         <div class="row mb-45">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <button class="btn btn-login btn-post">POST</button>
+            </div>
+        </div>
+    </div>
+</template>
+<template name="republishTime">
+    <div class="modal fade" id="{{id}}">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Enter a new date range</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="republishForm">
+                        <div class="form-group">
+                            <div class="input-group input-daterange">
+                                <input type="text" class="form-control" id="republishStart">
+                                <div class="input-group-addon">to</div>
+                                <input type="text" class="form-control" id="republishEnd">
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-wide">Submit</button>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{{_ "nav.close"}}</button>
+                </div>
+
             </div>
         </div>
     </div>
