--- a/client/main.less
+++ b/client/main.less
@@ -55,6 +55,7 @@
 @import '{}/imports/ui/stylingsheets/blogs.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 @import '{}/imports/ui/stylingsheets/bigPicture.less';
+@import '{}/imports/ui/stylingsheets/profile.less';
 @light-grey: rgb(236, 235, 234);
 @primary-dark: #43A047;
 *{
