Finished Images Implementation
>WHY IS THERE A METHOD TO GET OUR TWITTER API KEY AND SECRETS???
>Increased Website Accessability

--- a/imports/ui/components/navigation.html
+++ b/imports/ui/components/navigation.html
@@ -2,7 +2,7 @@
     <div class="top-nav">
         <nav>
             <div class="nav-extend hidden-print">
-                <span class="side-nav-prompt">
+                <span class="side-nav-prompt" aria-hidden="true">
                     <i class="fa fa-bars"></i> <span class="hidden-xs hidden-sm">{{_ "nav.left"}}</span>
                 </span>
             </div>
@@ -11,7 +11,7 @@
                 <div class="nav-title-text text-morph"><span>{{title}}</span></div>
             </div>
             <div class="nav-oper hidden-print">
-                <span class="top-operation-prompt">
+                <span class="top-operation-prompt" aria-hidden="true">
                     <i class="fa fa-search"></i> <span class="hidden-sm hidden-xs">{{_ "nav.right"}}</span>
                 </span>
             </div>
@@ -88,7 +88,7 @@
                 <div class="modal-body">
                     <form id="reLoginForm">
                         <div class="form-group">
-                            <input type="password" aria-describedby="TeachAssistPassword" placeholder="Password" id="reLoginPass">
+                            <input type="password" aria-describedby="Teach Assist Password" placeholder="Password" id="reLoginPass">
                         </div>
                         <button type="submit" class="btn btn-primary btn-wide">{{_ "nav.teach.submit_login"}}</button>
                     </form>
