Crucial Day -3 Patch

--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -28,7 +28,7 @@
                                     <p>Create from scratch</p>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-12 col-xs-12" tabindex="0">
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" tabindex="0">
                                 <div class="editor-options" id="checkDrafts" >
                                     <i class="fa fa-file-text-o fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
                                     <p>Resume a Draft</p>
@@ -368,13 +368,13 @@
             <h3>Pick a date range</h3>
             <p>Use the date selector bellow to select the days you would like this post to be visible to the rest of the users.</p>
             <div class="input-group input-daterange">
-                <input type="text" class="form-control startDate" >
+                <input type="text" class="form-control startDate" readonly="true">
                 <div class="input-group-addon">to</div>
-                <input type="text" class="form-control endDate">
+                <input type="text" class="form-control endDate" readonly="true">
             </div>
             <h3>Set the visibility</h3>
             <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
-            <select name="category-selector" class="visibility-select" style="width: 100%">
+            <select name="category-selector" class="visibility-select" style="width: 100%" readonly="true">
                 <option value="1">Everyone</option>
                 <option value="2">Students Only</option>
                 <option value="3">Teachers and Staff Only</option>
@@ -400,9 +400,9 @@
                 <h3>Pick a date range</h3>
                 <p>Use the date selector bellow to select the days you would like this post to be visible to the rest of the users.</p>
                 <div class="input-group input-daterange">
-                    <input type="text" class="form-control startDate" >
+                    <input type="text" class="form-control startDate" readonly="true">
                     <div class="input-group-addon">to</div>
-                    <input type="text" class="form-control endDate">
+                    <input type="text" class="form-control endDate" readonly="true">
                 </div>
                 <h3>Set the visibility</h3>
                 <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
