--- a/imports/ui/stylingsheets/editor.less
+++ b/imports/ui/stylingsheets/editor.less
@@ -249,6 +249,9 @@
   }
 }
 
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
+  background: #FFFFFF;
+}
 
 i.material-icons {
   font-size: 1.5rem;
