--- a/imports/ui/stylingsheets/login.less
+++ b/imports/ui/stylingsheets/login.less
@@ -1,5 +1,5 @@
-@primary: #4CAF50;
-
+@primary: #11998e;
+@primary-gradient: linear-gradient(to right, #11998e, #38ef7d);
 .branding{
   position: absolute;
   z-index: 100;
@@ -60,8 +60,7 @@
   display: flex;
   height: 100vh;
   background-color: #4CAF50;
-  background-position: center;
-  background-size: cover;
+  background: @primary-gradient;
 }
 .jumbotron-greeting{
   margin-bottom: 0;
