--- a/imports/ui/components/navigation.html
+++ b/imports/ui/components/navigation.html
@@ -42,9 +42,7 @@
 
     <div class="side-nav">
         <div class="side-nav-header">
-            <h4>
-                {{username}}
-            </h4>
+            <h4><a href="/profile">{{username}}</a></h4>
             <a href="/logout" class="logout-btn">{{_ "nav.logout"}}</a>
         </div>
         <div class="side-nav-body">
