--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -260,22 +260,34 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-sm-12 col-xs-12 mb-30">
-                    <div class="editor-options" id="imageOnly">
-                        <i class="fa fa-picture-o fa-5x mb-15 hidden-xs"></i>
-                        <p>I made a <b>Poster</b>. (Image Only)</p>
+                <div class="col-lg-4 col-sm-12 col-xs-12 mb-30" id="imageOnly" tabindex="0">
+                    <div class="editor-options" >
+                        <i class="fa fa-picture-o fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
+                        <h3>Poster</h3>
+                        <p class="text-muted">Made a brilliant poster about your announcement? Post it with the poster option!</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 col-xs-12 mb-30" id="textOnly">
+                <div class="col-lg-4 col-sm-12 col-xs-12 mb-30" id="textOnly" tabindex="0">
                     <div class="editor-options">
-                        <i class="fa fa-font fa-5x mb-15 hidden-xs"></i>
-                        <p>I wrote some <b>Text</b>. (Text Only)</p>
+                        <i class="fa fa-font fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
+                        <h3>Text</h3>
+                        <p class="text-muted">Got a quick announcement to make? Post it with this option!</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 col-xs-12" id="textAndImage">
+                <div class="col-lg-4 col-sm-12 col-xs-12" id="textAndImage" tabindex="0">
                     <div class="editor-options">
-                        <i class="fa fa-heart-o fa-5x mb-15 hidden-xs"></i>
-                        <p>I have both a poster and some text.</p>
+                        <i class="fa fa-heart-o fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
+                        <h3>Mixed</h3>
+                        <p class="text-muted">Can't explain everything with just a poster? Try using the mixed option!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center mb-30">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="googleDrive" tabindex="0">
+                    <div class="editor-options">
+                        <i class="fa fa-link fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
+                        <h3>Link</h3>
+                        <p class="text-muted">Found an interesting web page? Got a file to share? Post it with this option!</p>
                     </div>
                 </div>
             </div>
@@ -335,52 +347,52 @@
 </template>
 <template name="announcementOptions">
     {{#if imgAndText}}
-    <div class="row mb-45 text-left">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <h3>Add Some Tags</h3>
-            <p>By adding some tags, other users can easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
-            <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
-            <h3>Select Categories</h3>
-            <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-            <select name="category-selector" class="category-select announcement-category" multiple style="width: 100%"></select>
-            <h3>Is this Club related?</h3>
-            <p>If this announcement is for student clubs or teams, please select them below.</p>
-            <select name="category-selector" class="category-select clubs-category" multiple style="width: 100%"></select>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <h3>Set Priority</h3>
-            <p class="mb-15">Selecting a priority helps us determine the best way to present your announcement to other users.</p>
-            <div class="col-md-6 col-sm-6 col-xs-6 text-center">
-                <div class="is-checked priority-toggle" data-priority="image">
-                    <i class="fa fa-file-image-o fa-3x"></i>
-                    <h4 class="">Image</h4>
-                </div>
+        <div class="row mb-45 text-left">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <h3>Add Some Tags</h3>
+                <p>By adding some tags, other users can easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+                <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
+                <h3>Select Categories</h3>
+                <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
+                <select name="category-selector" class="category-select announcement-category" multiple style="width: 100%"></select>
+                <h3>Is this Club related?</h3>
+                <p>If this announcement is for student clubs or teams, please select them below.</p>
+                <select name="category-selector" class="category-select clubs-category" multiple style="width: 100%"></select>
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-6 text-center" >
-                <div class="priority-toggle" data-priority="text">
-                    <i class="fa fa-file-text-o fa-3x"></i>
-                    <h4 class="">Text</h4>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <h3>Set Priority</h3>
+                <p class="mb-15">Selecting a priority helps us determine the best way to present your announcement to other users.</p>
+                <div class="col-md-6 col-sm-6 col-xs-6 text-center">
+                    <div class="is-checked priority-toggle" data-priority="image">
+                        <i class="fa fa-file-image-o fa-3x"></i>
+                        <h4 class="">Image</h4>
+                    </div>
                 </div>
-            </div>
+                <div class="col-md-6 col-sm-6 col-xs-6 text-center" >
+                    <div class="priority-toggle" data-priority="text">
+                        <i class="fa fa-file-text-o fa-3x"></i>
+                        <h4 class="">Text</h4>
+                    </div>
+                </div>
 
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <h3>Pick a date range</h3>
-            <p>Use the date selector bellow to select the days you would like this post to be visible to the rest of the users.</p>
-            <div class="input-group input-daterange">
-                <input type="text" class="form-control startDate" readonly="true">
-                <div class="input-group-addon">to</div>
-                <input type="text" class="form-control endDate" readonly="true">
             </div>
-            <h3>Set the visibility</h3>
-            <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
-            <select name="category-selector" class="visibility-select" style="width: 100%" readonly="true">
-                <option value="1">Everyone</option>
-                <option value="2">Students Only</option>
-                <option value="3">Teachers and Staff Only</option>
-            </select>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <h3>Pick a date range</h3>
+                <p>Use the date selector bellow to select the days you would like this post to be visible to the rest of the users.</p>
+                <div class="input-group input-daterange">
+                    <input type="text" class="form-control startDate" readonly="true">
+                    <div class="input-group-addon">to</div>
+                    <input type="text" class="form-control endDate" readonly="true">
+                </div>
+                <h3>Set the visibility</h3>
+                <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
+                <select name="category-selector" class="visibility-select" style="width: 100%" readonly="true">
+                    <option value="1">Everyone</option>
+                    <option value="2">Students Only</option>
+                    <option value="3">Teachers and Staff Only</option>
+                </select>
+            </div>
         </div>
-    </div>
     {{else}}
         <div class="row mb-45 text-left">
             <div class="col-lg-4 col-md-3">
