--- a/imports/ui/components/navigation.html
+++ b/imports/ui/components/navigation.html
@@ -55,8 +55,10 @@
                 <a href="/dashboard/users"><i class="fa fa-group"></i> Manage Users</a>
                 <a href=""><i class="fa fa-newspaper-o"></i> Newsletters</a>
                 <a href=""><i class="fa fa-gear"></i> Settings</a>
+                <a href="/">Go Back</a>
             {{else}}
                 <a href="/">{{_ "nav.side_items.stream"}}</a>
+                <a href="/profile">Profile</a>
                 <!--<a href="/stories">{{_ "nav.side_items.stories"}}</a>-->
                 {{#if isStudent}}
 <!--                    <a href="" id="academics"><div class="expand-text">{{_ "nav.side_items.marks"}}</div><i class="fa fa-times academics-icon"></i></a>
