fixed z-index issue

--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -283,11 +283,18 @@
                 </div>
             </div>
             <div class="row text-center mb-30">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="googleDrive" tabindex="0">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="link" tabindex="0">
                     <div class="editor-options">
                         <i class="fa fa-link fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
                         <h3>Link</h3>
-                        <p class="text-muted">Found an interesting web page? Got a file to share? Post it with this option!</p>
+                        <p class="text-muted">Want to share an article or a file? Post it with this option!</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="video" tabindex="0">
+                    <div class="editor-options">
+                        <i class="fa fa-play fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
+                        <h3>Video</h3>
+                        <p class="text-muted">Found an interesting video? Post it with this option!</p>
                     </div>
                 </div>
             </div>
