--- a/imports/ui/stylingsheets/editor.less
+++ b/imports/ui/stylingsheets/editor.less
@@ -252,7 +252,19 @@
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
   background: #FFFFFF;
 }
-
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 i.material-icons {
   font-size: 1.5rem;
   color: white;
