streamline stream interface, added youtube video

--- a/imports/ui/stylingsheets/dash.less
+++ b/imports/ui/stylingsheets/dash.less
@@ -106,9 +106,11 @@
 }
 .image-preview{
   max-width: 20%;
+  min-width: 20%;
   img{
     max-width: 100%;
   }
+
 }
 .btn-reject{
   background-color: #f44336;
