--- a/imports/ui/stylingsheets/stream.less
+++ b/imports/ui/stylingsheets/stream.less
@@ -18,6 +18,12 @@
     font-weight: 300;
   }
 }
+.video-poster{
+  padding: 10px;
+  p{
+    margin-bottom: 0;
+  }
+}
 .is-checked{
   color: @primary;
 }
@@ -158,6 +164,11 @@
   background-repeat: no-repeat !important;
   background-position: center !important;
 }
+
+.main-info{
+  padding: 15px;
+}
+
 @media screen and (max-width: 768px) {
   .grid-sizer, .grid-item {
     width: 100%;
