--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -283,13 +283,13 @@
                 </div>
             </div>
             <div class="row text-center mb-30">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="link" tabindex="0">
+<!--                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="link" tabindex="0">
                     <div class="editor-options">
                         <i class="fa fa-link fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
                         <h3>Link</h3>
                         <p class="text-muted">Want to share an article or a file? Post it with this option!</p>
                     </div>
-                </div>
+                </div>-->
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="video" tabindex="0">
                     <div class="editor-options">
                         <i class="fa fa-youtube-play fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
@@ -364,7 +364,7 @@
             <div class="col-lg-12 col-md-12">
                 <h3>Video Preview</h3>
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube-nocookie.com/embed/{{id}}?rel=0&amp;controls=0" frameborder="0" id="videoPreviewFrame"></iframe>
+                    <iframe src="" frameborder="0" id="videoPreviewFrame"></iframe>
                 </div>
             </div>
         </div>
