--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -290,7 +290,7 @@
                         <p class="text-muted">Want to share an article or a file? Post it with this option!</p>
                     </div>
                 </div>-->
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30 hidden-xs" id="video" tabindex="0">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30" id="video" tabindex="0">
                     <div class="editor-options">
                         <i class="fa fa-youtube-play fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
                         <h3>YouTube Video</h3>
