--- a/imports/ui/stylingsheets/navigation.less
+++ b/imports/ui/stylingsheets/navigation.less
@@ -1,5 +1,5 @@
 @nav-color: #fff;
-@search-content-color: rgba(226, 225, 224, 0.49);
+@search-content-color: rgba(233, 235, 238, 0.7);
 .top-nav{
   position: fixed;
   transition: all 0.5s;
@@ -20,13 +20,14 @@
       width: 100%;
       font-family: "Roboto", sans-serif;
       font-weight: 300;
-      font-size: 45px;
+      font-size: 35px;
       border-left: none;
       border-top: 1px solid #b3b3b3;
       border-right: none;
       text-align: center;
-      padding: 20px 30px 20px 30px;
+      padding: 15px 30px 15px 30px;
       border-bottom: 1px solid #b3b3b3;
+      box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
     }
   }
   .search-content{
@@ -198,7 +199,9 @@
     margin-bottom: 0;
   }
 }
-
+.close-search{
+  position: absolute;
+}
 
 .nav-hub-progress{
   z-index: 4;
