calendar page work

--- a/client/main.less
+++ b/client/main.less
@@ -56,6 +56,8 @@
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 @import '{}/imports/ui/stylingsheets/bigPicture.less';
 @import '{}/imports/ui/stylingsheets/profile.less';
+@import '{}/imports/ui/stylingsheets/fullcalendar.less';
+@import '{}/imports/ui/stylingsheets/calendar.less';
 @light-grey: rgb(236, 235, 234);
 @primary-dark: #43A047;
 *{
