finish implementation of calendar

--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -65,7 +65,7 @@
                                 </div>
                             {{/ if}}
                             {{# if canWriteBlog}}
-                                <div class="col-lg-4 col-md-4 hidden-xs mb-30" id="startBlog" tabindex="0">
+                                <div class="col-lg-4 col-md-4 col-sm-12 hidden-xs mb-30" id="startBlog" tabindex="0">
                                     <div class="editor-options">
                                         <i class="fa fa-newspaper-o fa-5x mb-15 hidden-xs"></i>
                                         <p>Story</p>
@@ -259,7 +259,7 @@
                     <h4>How would you like to present your news?</h4>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-30">
                 <div class="col-lg-4 col-sm-12 col-xs-12 mb-30" id="imageOnly" tabindex="0">
                     <div class="editor-options" >
                         <i class="fa fa-picture-o fa-5x mb-15 hidden-xs" aria-hidden="true"></i>
