access calendar via stream

--- a/imports/ui/components/navigation.html
+++ b/imports/ui/components/navigation.html
@@ -1,5 +1,5 @@
 <template name="navigation">
-    <div class="top-nav">
+    <div class="top-nav nav-comp">
         <nav>
             <div class="nav-extend hidden-print">
                 <span class="side-nav-prompt" aria-hidden="true">
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="side-nav">
+    <div class="side-nav nav-comp">
         <div class="side-nav-header">
             <h4><a href="/profile">{{username}}</a></h4>
             <a href="/logout" class="logout-btn">{{_ "nav.logout"}}</a>
