--- a/imports/ui/stylingsheets/calendar.less
+++ b/imports/ui/stylingsheets/calendar.less
@@ -1,6 +1,21 @@
+.cal-back{
+    bottom: 0;
+    margin-bottom: 0;
+    position: fixed;
+    left: 0;
+    z-index: 5;
+}
+.calendar-body{
+    position: fixed;
+    display: none;
+    z-index: 4;
+    width: 100%;
+    min-height: 100vh;
+}
 .calendar{
     height: 100vh;
     padding: 30px;
+    width: 100%;
     background-color: #FFFFFF;
     table{
         height: 100%;
