Reworking a lot of stuff

--- a/imports/ui/stylingsheets/editor.less
+++ b/imports/ui/stylingsheets/editor.less
@@ -448,7 +448,7 @@ i.material-icons:hover {
   background: #fff;
   border: 2px solid #999;
   margin: 0 0 15px;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
   font-size: 14px;
   border-radius: 0;
@@ -465,6 +465,7 @@ i.material-icons:hover {
 }
 .select2-container {
   z-index: 7;
+  margin-bottom: 15px;
 }
 .select2-container--default .select2-selection--multiple{
   border: 2px solid #999;
@@ -476,7 +477,9 @@ i.material-icons:hover {
   padding-bottom: 15px;
 }
 .btn-save{
-  background-color: gray;
+  background-color: gray ;
+  width: 100%;
+  padding: 15px;
   &:hover, &:focus, &:active{
     background-color: darkgrey;
   }
