--- a/imports/ui/components/editor.html
+++ b/imports/ui/components/editor.html
@@ -385,19 +385,19 @@
     {{#if imgAndText}}
         <div class="row mb-45 text-left">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <h3>Add Some Tags</h3>
-                <p>By adding some tags, other users can easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+                <h4>Tags</h4>
+                <p class="help-text" data-for="announce-tags">Tags helps users locate your post through uhs.life's search engine. To add a tag, simply type in the text box below, use enter key to separate tags.</p>
                 <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
-                <h3>Select Categories</h3>
-                <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
+                <h4>Categories</h4>
+                <p class="help-text" data-for="announcement-category">Categories allows users to filter their streams and be notified about the announcement they are generally interested in. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
                 <select name="category-selector" class="category-select announcement-category" multiple style="width: 100%"></select>
-                <h3>Is this Club related?</h3>
-                <p>If this announcement is for student clubs or teams, please select them below.</p>
+                <h4>Clubs</h4>
+                <p class="help-text" data-for="club-category">If this announcement is for student clubs or teams, please select them below. This will notified users in the club when your announcment goes live.</p>
                 <select name="category-selector" class="category-select clubs-category" multiple style="width: 100%"></select>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <h3>Set Priority</h3>
-                <p class="mb-15">Selecting a priority helps us determine the best way to present your announcement to other users.</p>
+                <p class="mb-15">Priority helps us determine the best way to present your announcement to other users.</p>
                 <div class="col-md-6 col-sm-6 col-xs-6 text-center">
                     <div class="is-checked priority-toggle" data-priority="image">
                         <i class="fa fa-file-image-o fa-3x"></i>
@@ -413,15 +413,15 @@
 
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <h3>Pick a date range</h3>
-                <p>Use the date selector bellow to select the days you would like this post to be visible to the rest of the users.</p>
+                <h3>Date range</h3>
+                <p class="help-text" data-for="startDate">Use the date selector bellow to select the days you would like this post to be visible on uhs,life.</p>
                 <div class="input-group input-daterange">
                     <input type="text" class="form-control startDate" readonly="true">
                     <div class="input-group-addon">to</div>
                     <input type="text" class="form-control endDate" readonly="true">
                 </div>
-                <h3>Set the visibility</h3>
-                <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
+                <h3>Visibility</h3>
+                <p class="help-text" data-for="visibility-select">Choose who this post is written for, public means people outside the board will receive access.</p>
                 <select name="category-selector" class="visibility-select" style="width: 100%" readonly="true">
                     <option value="1">Everyone</option>
                     <option value="2">Students Only</option>
@@ -463,11 +463,11 @@
         </div>
     {{/ if}}
     <div class="row mb-45">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 mb-15">
             <button class="btn btn-login btn-post">POST</button>
         </div>
         <div class="col-lg-6 col-md-6">
-            <button class="btn btn-login btn-save">SAVE FOR LATER</button>
+            <a class="btn btn-save">SAVE FOR LATER</a>
         </div>
     </div>
 </template>
