--- a/imports/ui/components/navigation.html
+++ b/imports/ui/components/navigation.html
@@ -61,6 +61,7 @@
             {{else}}
                 <a href="/">{{_ "nav.side_items.stream"}}</a>
                 <a href="/profile">Profile</a>
+                <a href="/calendar">Calendar</a>
                 <!--<a href="/stories">{{_ "nav.side_items.stories"}}</a>-->
                 {{#if isStudent}}
 <!--                    <a href="" id="academics"><div class="expand-text">{{_ "nav.side_items.marks"}}</div><i class="fa fa-times academics-icon"></i></a>
