--- a/imports/ui/stylingsheets/dash.less
+++ b/imports/ui/stylingsheets/dash.less
@@ -61,6 +61,12 @@
     }
   }
 }
+.dash-user-container{
+  margin-bottom: 15px !important;
+}
+.user-hide{
+  cursor: pointer;
+}
 .dash-item{
   background-color: #FFFFFF;
   padding: 15px;
@@ -76,7 +82,6 @@
     font-size: 12px;
   }
   &:hover {
-    transform: translateY(-2px);
     box-shadow: 0 11px 20px rgba(50,50,93,.1), 0 6px 11px rgba(0,0,0,.08);
   }
 }
@@ -129,4 +134,6 @@
 }
 .modal-backdrop {
   z-index: 6;
+}
+@media screen and (max-width: 768px){
 }
